--- a/src/_includes/posts.html
+++ b/src/_includes/posts.html
@@ -13,6 +13,7 @@ prism: true
 
             </time>
         </p>
+        <img src="{{hero-image}}">
 
     </div>
     <article class="prose lg:prose-xl my-4 mx-auto">
